src/css/grabpress.css
/* ... */
.ui-selectmenu-menu li a,.ui-selectmenu-status { line-height: 1.4em; display: block; padding: .3em 2.1em .2em 1em; outline:none; text-decoration:none; }
.ui-selectmenu-menu li.ui-state-disabled a, .ui-state-disabled { cursor: default; }
.ui-selectmenu-menu li.ui-selectmenu-hasIcon a,
.ui-selectmenu-hasIcon .ui-selectmenu-status { padding-left: 20px; position: relative; margin-left: 5px; }
.ui-selectmenu-menu li .ui-icon, .ui-selectmenu-status .ui-icon { position: absolute; top: 1em; margin-top: -8px; left: 0; }
.ui-selectmenu-status { line-height: 1em; }
.ui-selectmenu-menu li span,.ui-selectmenu-status span { display:block; margin-bottom: .2em; }
.ui-selectmenu-menu li .ui-selectmenu-item-header { font-weight: bold; }
.ui-selectmenu-menu li .ui-selectmenu-item-footer { opacity: .8; }
/* for optgroups */
.ui-selectmenu-menu .ui-selectmenu-group { font-size: 1em; }
.ui-selectmenu-menu .ui-selectmenu-group .ui-selectmenu-group-label { line-height: 1.4em; display:block; padding: .6em .5em 0; font-weight: bold; }
.ui-selectmenu-menu .ui-selectmenu-group ul { margin: 0; padding: 0; }
/* IE6 workaround (dotted transparent borders) */
* html .ui-selectmenu-menu li { border-color: pink; filter:chroma(color=pink); width:100%; }
* html .ui-selectmenu-menu li a { position: relative }
/* IE7 workaround (opacity disabled) */
*+html .ui-state-disabled, *+html .ui-state-disabled a { color: silver; }

/**
* Custom CSS
*/

.grabpress-table input[type="text"]{  
    background: url("images/ui-bg_glass_100_f6f6f6_1x400.png") repeat-x scroll 50% 50% #F6F6F6; 
    border: 1px solid #CCCCCC; color: #999; 
    font-weight: bold; 
    padding: 2px 10px 1px 10px;
    height: 22px;
    *height: 17px;
    *padding-top: 5px;  
    width: 230px; 
    font-size: 12px; 
    font-family: 'Trebuchet MS',Tahoma,Verdana,Arial,sans-serif;
    -moz-border-radius: 3px; 
    -webkit-border-radius: 3px; 
    border-radius: 3px; 
    position:relative;
    z-index: 0;
    *width: 222px;
}
.grabpress-table input[type="text"]:focus{  background: url("images/ui-bg_glass_65_ffffff_1x400.png") repeat-x scroll 50% 50% #FFFFFF; border: 1px solid #FBD850; color: #D54E21; font-weight: bold; }
/*.grabpress-table input#btn-create-feed{ background: url("../images/button-grad.png") repeat-x scroll left top #21759B; border-color: #298CBA; color: #FFFFFF; font-weight: bold; height: 20px; text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.3);  float: right;}*/.grabpress-table input.btn-delete{line-height:auto; background:none; border:none; color: #000; cursor: pointer; }
/*.grabpress-table input#btn-preview-feed{ background: url("../images/white-grad.png") repeat-x scroll left top #F2F2F2; border-color: #BBBBBB; color: #464646; height: 20px; text-shadow: 0 1px 0 #FFFFFF; float: right; }*/.grabpress-table input#publish-check{ height: 13px; margin-left: 0px; }
.grabpress-table input#btn-preview-feed{ margin-left: 30px; }
.grabpress-table input.click-to-play-feed{ margin-left: 3px; }
.hide{ display: none;}
.author-select{ width: 225px; }
.grabpress-table input[type="checkbox"]{ vertical-align: baseline !important; }
.grabpress-table #channel-select, .grabpress-table .channel-select{ width: 230px !important; }
.grabpress-table .ui-widget { font-family: 'Trebuchet MS',Tahoma,Verdana,Arial,sans-serif; font-size: 12px; }

.template-form{
    width:400px;
    float:left;
}
.template-preview{        
    border: 1px solid black;
    float:left;       
    margin: 9px 0 0 20px;
    padding: 0;
    text-align: center; 
}
.template-preview .widescreen{
    border-left: 2px dotted red;
    border-right: 2px dotted red;
    display: block;
    margin-left: 70px;
    position: absolute;
}
.template-preview .standard{
    border-top: 2px dotted blue;
    border-bottom: 2px dotted blue;
    display: block;
    margin-top: 40px;
}
.result-tile:hover {
cursor: pointer;
}



.tooltip{     
    background-color: #F5F5B5;
    border: 1px solid #DECA7E;
    color: #303030;
    font-family: sans-serif;
    font-size: 12px;
    line-height: 18px;
    padding: 10px 13px;
    position: absolute;
    text-align: left;
    z-index: 2;
    text-decoration: none;
    width: 500px;
} 
.grabpress-table .ui-multiselect{
    *height: 28px;
}
.grabpress-table #schedule-select-button .ui-selectmenu-status {
    width: 52px;
}
.ui-multiselect-filter {
    float: none;
}

/* Preview Feed */
.tile-left {
    float: left;
    width: 130px;
}
.tile-left p{
    margin: 0;
    line-height: 12px;
    font-size: 10px;
}
.result-tile {
    float: left;
    width: 400px;
    padding: 10px;
    overflow: hidden;
    border-top: 1px solid black;
}
.tile-right {
    float: right;
    /*height: 110px;*/
    width: 250px;
    overflow: hidden;
}
fieldset.edit-mode{
	border-color: #c41500;
}
h2.video_title {
    font-size: 14px;
    font-weight: bold;
    line-height: 14px;
    padding: 0;
}
p#edit-notice{
	font-size: 14px;
	color: #c41500;
	text-align: center;
	font-style: italic;
	margin: 12px 10px 10px 10px;
}
#close-preview {
    float: right;
    margin-top: -8px;
}
fieldset {
    padding: 10px;
    border: 1px solid black;
}
#preview-feed {
    width: 850px;
}
legend {
    font-size: 16px;
}
.preview-text {
	display: block;
}
#account-chooser {
	margin-bottom: 10px;
}
#account-chooser td {
	font-size: 14px;
}
#account-chooser input {
	margin: 0 5px 5px 10px;
	
}
.account-help {
	font-size: 10px;
}

input[ type="button" ]/*, #account input[ type="checkbox"], select*/{
	/*margin: 0 5px;*/
	display: inline;
	float: right;
}
#link-existing input[type='text'], #link-existing input[type='password']{
	width:250px;
	float: right;
}
.grabpress-table input[ type="button" ]{
	float: right;
}

#link-existing td, #create-account td, #unlink td {
	width: 400px;
	height: 16px;
}
td * {
	vertical-align: bottom;
}
#account {
	width: 400px;
}
#account.create {
	width: 650px;
}
#account.create td{
padding-right: 10px;
} 
#account.create input[type='text'], #account.create input[type='password']{
	width: 346px;
}
/* ... */

